# hovercrab

./: .gitattributes  .gitignore  Cargo.toml  rustfmt.toml
assets/: models  textures
project/models/: ground.blend  ground.gltf  hovercrab.blend  hovercrab.glb
src/: main.rs  tmp.rs
src/gameplay/: mod.rs  spawn.rs
src/gameplay/objects/: hovercrab.rs  mod.rs
src/presentation/: mod.rs
src/presentation/objects/: hovercrab.rs  mod.rs
src/presentation/player/: actions.rs  camera.rs  mod.rs  mouselook.rs
src/utils/: file_utils.rs  math_algorithms.rs  mod.rs
src/utils/for_crate/: bevy.rs  bevy_egui.rs  mod.rs  std.rs
src/utils/plugins/: mod.rs  scene_utils.rs
